--- a/index.qmd
+++ b/index.qmd
@@ -6,12 +6,19 @@ A list of all weekwise answers to practice problems.
 
 \ 
 
+## Tutorials 
+- [Basic Math for Pharmacokinetics](./tutorials/01-math-for-pk.html)
+- [One Compartment IV Bolus](./tutorials/02-one-compIVBolus.html)
+- [Membrane Permeability, Rate of Distribution, and Extent of Distribution](./tutorials/03-membrane-permeability-rate-extent-distribution.html)
+
+
 ## Practice Problems
-- [Week 1](./questions/01-math-pp.html)
-- [Week 2](./questions/02-one-comp-IVBolus-pp.html)
-- [Week 3](./questions/03-p1-mem-perm-pp.html)
+- [Basic Math for Pharmacokinetics](./questions/01-math-pp.html)
+- [One Compartment IV Bolus](./questions/02-one-comp-IVBolus-pp.html)
+- [Membrane Permeability, Rate of Distribution, and Extent of Distribution](./questions/03-p1-mem-perm-pp.html)
+- [Drug Distribution](./questions/03-p2-distribution-pp.html)
 
 ## Practice Answers
-- [Week 1](./docs/Week-1/01-math-pp-ans.html)
-- [Week 2](./docs/Week-2/02-one-comp-IVBolus-pp-ans.html)
-- [Week 3](./docs/Week-3/03-p1-mem-perm-pp.html)
+- [Basic Math for Pharmacokinetics](./docs/Week-1/01-math-pp-ans.html)
+- [One Compartment IV Bolus](./docs/Week-2/02-one-comp-IVBolus-pp-ans.html)
+- [Membrane Permeability, Rate of Distribution, and Extent of Distribution](./docs/Week-3/03-p1-mem-perm-pp.html)
