--- a/index.qmd
+++ b/index.qmd
@@ -10,7 +10,7 @@ A list of all weekwise answers to practice problems.
 
 <li><a href="./tutorials/01-math-for-pk.html" target="_blank">Basic Math for Pharmacokinetics</a></li>
 <li><a href="./tutorials/02-one-compIVBolus.html" target="_blank">One Compartment IV Bolus</a></li>
-<li><a href="./tutorials/03-p1-mem-perm-pp.html" target="_blank">Membrane Permeability, Rate of Distribution, and Extent of Distribution</a></li>
+<li><a href="./tutorials/03-membrane-permeability-rate-extent-distribution.html" target="_blank">Membrane Permeability, Rate of Distribution, and Extent of Distribution</a></li>
 
 ## Practice Problems
 
@@ -24,3 +24,4 @@ A list of all weekwise answers to practice problems.
 <li><a href="./docs/Week-1/01-math-pp-ans.html" target="_blank">Basic Math for Pharmacokinetics</a></li>
 <li><a href="./docs/Week-2/02-one-comp-IVBolus-pp-ans.html" target="_blank">One Compartment IV Bolus</a></li>
 <li><a href="./docs/Week-3/03-p1-mem-perm-pp-ans.html" target="_blank">Membrane Permeability, Rate of Distribution, and Extent of Distribution</a></li>
+<li><a href="./docs/Week-3/03-p2-distribution-pp-ans.html" target="_blank">Drug Distribution</a></li>
